# ReflectionApi

./: .gitmodules  CMakeLists.txt  README.md
example/: CMakeLists.txt  example-1.cpp  example-2.cpp  example-3.cpp  example-4.cpp  example-5.cpp
include/ReflectionApi/: converterhelper.h  entity.h  entity.hpp  property.h  property.hpp  referenceproperty.h  referenceproperty.hpp  reflectionapi.h  reflectionapi_global.h
include/ReflectionApi/helper/: sfinae.h  templates.h  tuplealgoritm.h  tuplealgoritm.hpp
include/ReflectionApi/helper/typehelper/: templates.h
include/ReflectionApi/visitor/: anypropertyvisitor.h  anypropertyvisitor.hpp  properyvisitor.h  referencepropertyvisitor.h
src/: entity.cpp  property.cpp  referenceproperty.cpp
src/helper/: tuplealgoritm.cpp
src/visitor/: anypropertyvistior.cpp  properyvisitor.cpp  referencepropertyvisitor.cpp
